<resources>
    <string name="app_name">Sonludilo</string>
    <string name="title_player">Player</string>
    <string name="title_albums">Albums</string>
    <string name="title_tracks">Tracks</string>

    <string name="artist">Artist</string>
    <string name="various_artists">Various Artists</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="number_of_tracks">Number of tracks</string>
    <string name="time">Time</string>
    <string name="track">Track</string>
    <string name="clear">Clear</string>

    <string name="number_abb">No</string>
    <string name="artist_abb">Ar</string>
    <string name="track_abb">Tr</string>
    <string name="title_abb">Ti</string>
    <string name="album_abb">Al</string>
    <string name="clear_abb">Cl</string>

    <string name="tip_player_fragment">Tap = play track, Press and hold = remove track. Use the buttons at the bottom to sort the list by track no. (No), artist (Ar), track title (Ti) or album name (Al).</string>
    <string name="tip_track_fragment">Tap a track to add or remove it from the playlist. Use the buttons at the bottom to sort the list.</string>
    <string name="tip_album_fragment">Tap = add an album to the playlist, Press and hold = show added tracks. Use the buttons at the bottom to sort the list.</string>

    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="repeat">Repeat track</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Next track</string>
    <string name="prev">Previous track</string>
    <string name="seek_bar">Seek bar</string>
    <string name="tape">Play/Stop</string>

</resources>