<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_player">

    <fragment
        android:id="@+id/navigation_player"
        android:name="pl.sokolak.sonludilo.ui.player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pl.sokolak.sonludilo.ui.dashboard.DashboardFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tracks"
        android:name="pl.sokolak.sonludilo.ui.tracks.TracksFragment"
        android:label="@string/title_tracks"
        tools:layout="@layout/fragment_tracks" >
        <action
            android:id="@+id/action_tracks_to_player"
            app:destination="@id/navigation_player" />
    </fragment>
</navigation>